dslParser.js
// @generated by Peggy 4.2.0.
//
// https://peggyjs.org/
(function(root) {
  "use strict";

function peg$subclass(child, parent) {
  function C() { this.constructor = child; }
  C.prototype = parent.prototype;
  child.prototype = new C();
}

function peg$SyntaxError(message, expected, found, location) {
  var self = Error.call(this, message);
  // istanbul ignore next Check is a necessary evil to support older environments
  if (Object.setPrototypeOf) {
    Object.setPrototypeOf(self, peg$SyntaxError.prototype);
  }
  self.expected = expected;
  self.found = found;
  self.location = location;
  self.name = "SyntaxError";
  return self;
}

peg$subclass(peg$SyntaxError, Error);

function peg$padEnd(str, targetLength, padString) {
  padString = padString || " ";
  if (str.length > targetLength) { return str; }
  targetLength -= str.length;
  padString += padString.repeat(targetLength);
  return str + padString.slice(0, targetLength);
}

peg$SyntaxError.prototype.format = function(sources) {
  var str = "Error: " + this.message;
  if (this.location) {
    var src = null;
    var k;
    for (k = 0; k < sources.length; k++) {
      if (sources[k].source === this.location.source) {
        src = sources[k].text.split(/\r\n|\n|\r/g);
        break;
      }
    }
    var s = this.location.start;
    var offset_s = (this.location.source && (typeof this.location.source.offset === "function"))
      ? this.location.source.offset(s)
      : s;
    var loc = this.location.source + ":" + offset_s.line + ":" + offset_s.column;
    if (src) {
      var e = this.location.end;
      var filler = peg$padEnd("", offset_s.line.toString().length, ' ');
      var line = src[s.line - 1];
      var last = s.line === e.line ? e.column : line.length + 1;
      var hatLen = (last - s.column) || 1;
      str += "\n --> " + loc + "\n"
          + filler + " |\n"
          + offset_s.line + " | " + line + "\n"
          + filler + " | " + peg$padEnd("", s.column - 1, ' ')
          + peg$padEnd("", hatLen, "^");
    } else {
      str += "\n at " + loc;
    }
  }
  return str;
};

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
    literal: function(expectation) {
      return "\"" + literalEscape(expectation.text) + "\"";
    },

    class: function(expectation) {
      var escapedParts = expectation.parts.map(function(part) {
        return Array.isArray(part)
          ? classEscape(part[0]) + "-" + classEscape(part[1])
          : classEscape(part);
      });

      return "[" + (expectation.inverted ? "^" : "") + escapedParts.join("") + "]";
    },

    any: function() {
      return "any character";
    },

    end: function() {
      return "end of input";
    },

    other: function(expectation) {
      return expectation.description;
    }
  };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, "\\\\")
      .replace(/"/g,  "\\\"")
      .replace(/\0/g, "\\0")
      .replace(/\t/g, "\\t")
      .replace(/\n/g, "\\n")
      .replace(/\r/g, "\\r")
      .replace(/[\x00-\x0F]/g,          function(ch) { return "\\x0" + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return "\\x"  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, "\\\\")
      .replace(/\]/g, "\\]")
      .replace(/\^/g, "\\^")
      .replace(/-/g,  "\\-")
      .replace(/\0/g, "\\0")
      .replace(/\t/g, "\\t")
      .replace(/\n/g, "\\n")
      .replace(/\r/g, "\\r")
      .replace(/[\x00-\x0F]/g,          function(ch) { return "\\x0" + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return "\\x"  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = expected.map(describeExpectation);
    var i, j;

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== undefined ? options : {};

  var peg$FAILED = {};
  var peg$source = options.grammarSource;

  var peg$startRuleFunctions = { Start: peg$parseStart };
  var peg$startRuleFunction = peg$parseStart;

  var peg$c0 = "=";
  var peg$c1 = "obj.create";
  var peg$c2 = "(";
  var peg$c3 = ",";
  var peg$c4 = ")";
  var peg$c5 = ";";
  var peg$c6 = ".delete";
  var peg$c7 = ".move";
  var peg$c8 = "if";
  var peg$c9 = "{";
  var peg$c10 = "}";
  var peg$c11 = "else";
  var peg$c12 = ".";
  var peg$c13 = "==";
  var peg$c14 = "!=";
  var peg$c15 = ">=";
  var peg$c16 = "<=";
  var peg$c17 = "Loop";
  var peg$c18 = "s";

  var peg$r0 = /^[<>]/;
  var peg$r1 = /^[+\-]/;
  var peg$r2 = /^[a-zA-Z_]/;
  var peg$r3 = /^[a-zA-Z0-9_]/;
  var peg$r4 = /^[0-9]/;
  var peg$r5 = /^[ \t\n\r]/;

  var peg$e0 = peg$literalExpectation("=", false);
  var peg$e1 = peg$literalExpectation("obj.create", false);
  var peg$e2 = peg$literalExpectation("(", false);
  var peg$e3 = peg$literalExpectation(",", false);
  var peg$e4 = peg$literalExpectation(")", false);
  var peg$e5 = peg$literalExpectation(";", false);
  var peg$e6 = peg$literalExpectation(".delete", false);
  var peg$e7 = peg$literalExpectation(".move", false);
  var peg$e8 = peg$literalExpectation("if", false);
  var peg$e9 = peg$literalExpectation("{", false);
  var peg$e10 = peg$literalExpectation("}", false);
  var peg$e11 = peg$literalExpectation("else", false);
  var peg$e12 = peg$literalExpectation(".", false);
  var peg$e13 = peg$literalExpectation("==", false);
  var peg$e14 = peg$literalExpectation("!=", false);
  var peg$e15 = peg$classExpectation(["<", ">"], false, false);
  var peg$e16 = peg$literalExpectation(">=", false);
  var peg$e17 = peg$literalExpectation("<=", false);
  var peg$e18 = peg$literalExpectation("Loop", false);
  var peg$e19 = peg$classExpectation(["+", "-"], false, false);
  var peg$e20 = peg$classExpectation([["a", "z"], ["A", "Z"], "_"], false, false);
  var peg$e21 = peg$classExpectation([["a", "z"], ["A", "Z"], ["0", "9"], "_"], false, false);
  var peg$e22 = peg$classExpectation([["0", "9"]], false, false);
  var peg$e23 = peg$literalExpectation("s", false);
  var peg$e24 = peg$classExpectation([" ", "\t", "\n", "\r"], false, false);
  var peg$e25 = peg$anyExpectation();

  var peg$f0 = function(animations) {
    return animations;
  };
  var peg$f1 = function(name, x, y, time, image) {
    return { type: "objectCreation", name, x, y, time, image };
  };
  var peg$f2 = function(name, time) {
    return { type: "delete", name, time };
  };
  var peg$f3 = function(name, x, y, time) {
    return { type: "movement", name, x, y, time };
  };
  var peg$f4 = function(condition, actions, actions1) {
    return { type: "ifStatement", condition, actions, actions1 };
  };
  var peg$f5 = function(obj, property, comparator, value) {
    return { obj, property, comparator, value };
  };
  var peg$f6 = function(count, obj, startTime, actions) {
    return { type: "loop", count, obj, startTime, actions };
  };
  var peg$f7 = function(sign, value) {
    return sign ? [sign, value] : value;
  };
  var peg$f8 = function() {
    return text();
  };
  var peg$f9 = function() {
    return text();
  };
  var peg$f10 = function() {
    return parseInt(text(), 10);
  };
  var peg$f11 = function() {
    return parseInt(text(), 10);
  };
  var peg$currPos = options.peg$currPos | 0;
  var peg$savedPos = peg$currPos;
  var peg$posDetailsCache = [{ line: 1, column: 1 }];
  var peg$maxFailPos = peg$currPos;
  var peg$maxFailExpected = options.peg$maxFailExpected || [];
  var peg$silentFails = options.peg$silentFails | 0;

  var peg$result;

  if (options.startRule) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function offset() {
    return peg$savedPos;
  }

  function range() {
    return {
      source: peg$source,
      start: peg$savedPos,
      end: peg$currPos
    };
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos];
    var p;

    if (details) {
      return details;
    } else {
      if (pos >= peg$posDetailsCache.length) {
        p = peg$posDetailsCache.length - 1;
      } else {
        p = pos;
        while (!peg$posDetailsCache[--p]) {}
      }

      details = peg$posDetailsCache[p];
      details = {
        line: details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;

      return details;
    }
  }

  function peg$computeLocation(startPos, endPos, offset) {
    var startPosDetails = peg$computePosDetails(startPos);
    var endPosDetails = peg$computePosDetails(endPos);

    var res = {
      source: peg$source,
      start: {
        offset: startPos,
        line: startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line: endPosDetails.line,
        column: endPosDetails.column
      }
    };
    if (offset && peg$source && (typeof peg$source.offset === "function")) {
      res.start = peg$source.offset(res.start);
      res.end = peg$source.offset(res.end);
    }
    return res;
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parseStart() {
    var s0, s1, s2, s3, s4;

    s0 = peg$currPos;
    s1 = peg$parsews();
    s2 = [];
    s3 = peg$parseanimation();
    if (s3 !== peg$FAILED) {
      while (s3 !== peg$FAILED) {
        s2.push(s3);
        s3 = peg$parseanimation();
      }
    } else {
      s2 = peg$FAILED;
    }
    if (s2 !== peg$FAILED) {
      s3 = peg$parsews();
      s4 = peg$parseEOF();
      if (s4 !== peg$FAILED) {
        peg$savedPos = s0;
        s0 = peg$f0(s2);
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseanimation() {
    var s0;

    s0 = peg$parseobjectCreation();
    if (s0 === peg$FAILED) {
      s0 = peg$parsemovement();
      if (s0 === peg$FAILED) {
        s0 = peg$parseloop();
        if (s0 === peg$FAILED) {
          s0 = peg$parseifStatement();
          if (s0 === peg$FAILED) {
            s0 = peg$parsedeleteObject();
          }
        }
      }
    }

    return s0;
  }

  function peg$parseobjectCreation() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10, s11, s12, s13, s14, s15, s16, s17, s18, s19, s20, s21, s22, s23, s24, s25;

    s0 = peg$currPos;
    s1 = peg$parseIdentifier();
    if (s1 !== peg$FAILED) {
      s2 = peg$parsews();
      if (input.charCodeAt(peg$currPos) === 61) {
        s3 = peg$c0;
        peg$currPos++;
      } else {
        s3 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e0); }
      }
      if (s3 !== peg$FAILED) {
        s4 = peg$parsews();
        if (input.substr(peg$currPos, 10) === peg$c1) {
          s5 = peg$c1;
          peg$currPos += 10;
        } else {
          s5 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e1); }
        }
        if (s5 !== peg$FAILED) {
          s6 = peg$parsews();
          if (input.charCodeAt(peg$currPos) === 40) {
            s7 = peg$c2;
            peg$currPos++;
          } else {
            s7 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$e2); }
          }
          if (s7 !== peg$FAILED) {
            s8 = peg$parseInteger();
            if (s8 !== peg$FAILED) {
              s9 = peg$parsews();
              if (input.charCodeAt(peg$currPos) === 44) {
                s10 = peg$c3;
                peg$currPos++;
              } else {
                s10 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$e3); }
              }
              if (s10 !== peg$FAILED) {
                s11 = peg$parsews();
                s12 = peg$parseInteger();
                if (s12 !== peg$FAILED) {
                  s13 = peg$parsews();
                  if (input.charCodeAt(peg$currPos) === 44) {
                    s14 = peg$c3;
                    peg$currPos++;
                  } else {
                    s14 = peg$FAILED;
                    if (peg$silentFails === 0) { peg$fail(peg$e3); }
                  }
                  if (s14 !== peg$FAILED) {
                    s15 = peg$parsews();
                    s16 = peg$parseTime();
                    if (s16 !== peg$FAILED) {
                      s17 = peg$parsews();
                      if (input.charCodeAt(peg$currPos) === 44) {
                        s18 = peg$c3;
                        peg$currPos++;
                      } else {
                        s18 = peg$FAILED;
                        if (peg$silentFails === 0) { peg$fail(peg$e3); }
                      }
                      if (s18 !== peg$FAILED) {
                        s19 = peg$parsews();
                        s20 = peg$parseimageReference();
                        if (s20 !== peg$FAILED) {
                          s21 = peg$parsews();
                          if (input.charCodeAt(peg$currPos) === 41) {
                            s22 = peg$c4;
                            peg$currPos++;
                          } else {
                            s22 = peg$FAILED;
                            if (peg$silentFails === 0) { peg$fail(peg$e4); }
                          }
                          if (s22 !== peg$FAILED) {
                            s23 = peg$parsews();
                            if (input.charCodeAt(peg$currPos) === 59) {
                              s24 = peg$c5;
                              peg$currPos++;
                            } else {
                              s24 = peg$FAILED;
                              if (peg$silentFails === 0) { peg$fail(peg$e5); }
                            }
                            if (s24 === peg$FAILED) {
                              s24 = null;
                            }
                            s25 = peg$parsews();
                            peg$savedPos = s0;
                            s0 = peg$f1(s1, s8, s12, s16, s20);
                          } else {
                            peg$currPos = s0;
                            s0 = peg$FAILED;
                          }
                        } else {
                          peg$currPos = s0;
                          s0 = peg$FAILED;
                        }
                      } else {
                        peg$currPos = s0;
                        s0 = peg$FAILED;
                      }
                    } else {
                      peg$currPos = s0;
                      s0 = peg$FAILED;
                    }
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parsedeleteObject() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10, s11;

    s0 = peg$currPos;
    s1 = peg$parseIdentifier();
    if (s1 !== peg$FAILED) {
      s2 = peg$parsews();
      if (input.substr(peg$currPos, 7) === peg$c6) {
        s3 = peg$c6;
        peg$currPos += 7;
      } else {
        s3 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e6); }
      }
      if (s3 !== peg$FAILED) {
        s4 = peg$parsews();
        if (input.charCodeAt(peg$currPos) === 40) {
          s5 = peg$c2;
          peg$currPos++;
        } else {
          s5 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e2); }
        }
        if (s5 !== peg$FAILED) {
          s6 = peg$parseTime();
          if (s6 !== peg$FAILED) {
            s7 = peg$parsews();
            if (input.charCodeAt(peg$currPos) === 41) {
              s8 = peg$c4;
              peg$currPos++;
            } else {
              s8 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$e4); }
            }
            if (s8 !== peg$FAILED) {
              s9 = peg$parsews();
              if (input.charCodeAt(peg$currPos) === 59) {
                s10 = peg$c5;
                peg$currPos++;
              } else {
                s10 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$e5); }
              }
              if (s10 === peg$FAILED) {
                s10 = null;
              }
              s11 = peg$parsews();
              peg$savedPos = s0;
              s0 = peg$f2(s1, s6);
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parsemovement() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10, s11, s12, s13, s14, s15, s16, s17, s18, s19;

    s0 = peg$currPos;
    s1 = peg$parseIdentifier();
    if (s1 !== peg$FAILED) {
      s2 = peg$parsews();
      if (input.substr(peg$currPos, 5) === peg$c7) {
        s3 = peg$c7;
        peg$currPos += 5;
      } else {
        s3 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e7); }
      }
      if (s3 !== peg$FAILED) {
        s4 = peg$parsews();
        if (input.charCodeAt(peg$currPos) === 40) {
          s5 = peg$c2;
          peg$currPos++;
        } else {
          s5 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e2); }
        }
        if (s5 !== peg$FAILED) {
          s6 = peg$parsecoordinate();
          if (s6 !== peg$FAILED) {
            s7 = peg$parsews();
            if (input.charCodeAt(peg$currPos) === 44) {
              s8 = peg$c3;
              peg$currPos++;
            } else {
              s8 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$e3); }
            }
            if (s8 !== peg$FAILED) {
              s9 = peg$parsews();
              s10 = peg$parsecoordinate();
              if (s10 !== peg$FAILED) {
                s11 = peg$parsews();
                if (input.charCodeAt(peg$currPos) === 44) {
                  s12 = peg$c3;
                  peg$currPos++;
                } else {
                  s12 = peg$FAILED;
                  if (peg$silentFails === 0) { peg$fail(peg$e3); }
                }
                if (s12 !== peg$FAILED) {
                  s13 = peg$parsews();
                  s14 = peg$parseTime();
                  if (s14 !== peg$FAILED) {
                    s15 = peg$parsews();
                    if (input.charCodeAt(peg$currPos) === 41) {
                      s16 = peg$c4;
                      peg$currPos++;
                    } else {
                      s16 = peg$FAILED;
                      if (peg$silentFails === 0) { peg$fail(peg$e4); }
                    }
                    if (s16 !== peg$FAILED) {
                      s17 = peg$parsews();
                      if (input.charCodeAt(peg$currPos) === 59) {
                        s18 = peg$c5;
                        peg$currPos++;
                      } else {
                        s18 = peg$FAILED;
                        if (peg$silentFails === 0) { peg$fail(peg$e5); }
                      }
                      if (s18 === peg$FAILED) {
                        s18 = null;
                      }
                      s19 = peg$parsews();
                      peg$savedPos = s0;
                      s0 = peg$f3(s1, s6, s10, s14);
                    } else {
                      peg$currPos = s0;
                      s0 = peg$FAILED;
                    }
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseifStatement() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10, s11, s12, s13, s14, s15, s16, s17, s18, s19, s20, s21, s22, s23, s24;

    s0 = peg$currPos;
    s1 = peg$parsews();
    if (input.substr(peg$currPos, 2) === peg$c8) {
      s2 = peg$c8;
      peg$currPos += 2;
    } else {
      s2 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e8); }
    }
    if (s2 !== peg$FAILED) {
      s3 = peg$parsews();
      if (input.charCodeAt(peg$currPos) === 40) {
        s4 = peg$c2;
        peg$currPos++;
      } else {
        s4 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e2); }
      }
      if (s4 !== peg$FAILED) {
        s5 = peg$parseconditionExpression();
        if (s5 !== peg$FAILED) {
          if (input.charCodeAt(peg$currPos) === 41) {
            s6 = peg$c4;
            peg$currPos++;
          } else {
            s6 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$e4); }
          }
          if (s6 !== peg$FAILED) {
            s7 = peg$parsews();
            if (input.charCodeAt(peg$currPos) === 123) {
              s8 = peg$c9;
              peg$currPos++;
            } else {
              s8 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$e9); }
            }
            if (s8 !== peg$FAILED) {
              s9 = peg$parsews();
              s10 = [];
              s11 = peg$parseanimation();
              if (s11 !== peg$FAILED) {
                while (s11 !== peg$FAILED) {
                  s10.push(s11);
                  s11 = peg$parseanimation();
                }
              } else {
                s10 = peg$FAILED;
              }
              if (s10 !== peg$FAILED) {
                s11 = peg$parsews();
                if (input.charCodeAt(peg$currPos) === 125) {
                  s12 = peg$c10;
                  peg$currPos++;
                } else {
                  s12 = peg$FAILED;
                  if (peg$silentFails === 0) { peg$fail(peg$e10); }
                }
                if (s12 !== peg$FAILED) {
                  s13 = peg$parsews();
                  if (input.charCodeAt(peg$currPos) === 59) {
                    s14 = peg$c5;
                    peg$currPos++;
                  } else {
                    s14 = peg$FAILED;
                    if (peg$silentFails === 0) { peg$fail(peg$e5); }
                  }
                  if (s14 === peg$FAILED) {
                    s14 = null;
                  }
                  s15 = peg$parsews();
                  if (input.substr(peg$currPos, 4) === peg$c11) {
                    s16 = peg$c11;
                    peg$currPos += 4;
                  } else {
                    s16 = peg$FAILED;
                    if (peg$silentFails === 0) { peg$fail(peg$e11); }
                  }
                  if (s16 !== peg$FAILED) {
                    s17 = peg$parsews();
                    if (input.charCodeAt(peg$currPos) === 123) {
                      s18 = peg$c9;
                      peg$currPos++;
                    } else {
                      s18 = peg$FAILED;
                      if (peg$silentFails === 0) { peg$fail(peg$e9); }
                    }
                    if (s18 !== peg$FAILED) {
                      s19 = peg$parsews();
                      s20 = [];
                      s21 = peg$parseanimation();
                      while (s21 !== peg$FAILED) {
                        s20.push(s21);
                        s21 = peg$parseanimation();
                      }
                      s21 = peg$parsews();
                      if (input.charCodeAt(peg$currPos) === 125) {
                        s22 = peg$c10;
                        peg$currPos++;
                      } else {
                        s22 = peg$FAILED;
                        if (peg$silentFails === 0) { peg$fail(peg$e10); }
                      }
                      if (s22 !== peg$FAILED) {
                        s23 = peg$parsews();
                        if (input.charCodeAt(peg$currPos) === 59) {
                          s24 = peg$c5;
                          peg$currPos++;
                        } else {
                          s24 = peg$FAILED;
                          if (peg$silentFails === 0) { peg$fail(peg$e5); }
                        }
                        if (s24 === peg$FAILED) {
                          s24 = null;
                        }
                        peg$savedPos = s0;
                        s0 = peg$f4(s5, s10, s20);
                      } else {
                        peg$currPos = s0;
                        s0 = peg$FAILED;
                      }
                    } else {
                      peg$currPos = s0;
                      s0 = peg$FAILED;
                    }
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseconditionExpression() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9;

    s0 = peg$currPos;
    s1 = peg$parseIdentifier();
    if (s1 !== peg$FAILED) {
      s2 = peg$parsews();
      if (input.charCodeAt(peg$currPos) === 46) {
        s3 = peg$c12;
        peg$currPos++;
      } else {
        s3 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e12); }
      }
      if (s3 !== peg$FAILED) {
        s4 = peg$parsews();
        s5 = peg$parseIdentifier();
        if (s5 !== peg$FAILED) {
          s6 = peg$parsews();
          if (input.substr(peg$currPos, 2) === peg$c13) {
            s7 = peg$c13;
            peg$currPos += 2;
          } else {
            s7 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$e13); }
          }
          if (s7 === peg$FAILED) {
            if (input.substr(peg$currPos, 2) === peg$c14) {
              s7 = peg$c14;
              peg$currPos += 2;
            } else {
              s7 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$e14); }
            }
            if (s7 === peg$FAILED) {
              s7 = input.charAt(peg$currPos);
              if (peg$r0.test(s7)) {
                peg$currPos++;
              } else {
                s7 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$e15); }
              }
              if (s7 === peg$FAILED) {
                if (input.substr(peg$currPos, 2) === peg$c15) {
                  s7 = peg$c15;
                  peg$currPos += 2;
                } else {
                  s7 = peg$FAILED;
                  if (peg$silentFails === 0) { peg$fail(peg$e16); }
                }
                if (s7 === peg$FAILED) {
                  if (input.substr(peg$currPos, 2) === peg$c16) {
                    s7 = peg$c16;
                    peg$currPos += 2;
                  } else {
                    s7 = peg$FAILED;
                    if (peg$silentFails === 0) { peg$fail(peg$e17); }
                  }
                }
              }
            }
          }
          if (s7 !== peg$FAILED) {
            s8 = peg$parsews();
            s9 = peg$parseInteger();
            if (s9 !== peg$FAILED) {
              peg$savedPos = s0;
              s0 = peg$f5(s1, s5, s7, s9);
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseloop() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10, s11, s12, s13, s14, s15, s16, s17, s18, s19, s20, s21, s22, s23;
